script para testar todos exemplos, correção de erros no .g4 que deram nos exemplos instanciate.lan e function_call_ret.lan e cast dos tipos Int, FLoat e Bool